syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.myexamples.clientstream";
option java_outer_classname = "ClientStreamOwn";
option objc_class_prefix = "HLW";
package clientstream;
service ClientStream{
    rpc sayMultipleHellos (stream Req) returns (Reply) {}
}
message Req{
    string message = 1;
}
message Reply{
    uint32 number_of_messages=1;
}